woosh install shots

--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -1,6 +1,22 @@
 <section class="slick-wrapper">
     <ul class="slick-01">
     
+        <div><a  href="#fb-install-01" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/woosh-01-sqr.jpg" alt="Installation Shot"/></a></div>
+        <div><a  href="#fb-install-02" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/woosh-02-sqr.jpg" alt="Installation Shot"/></a></div>
+        <div><a  href="#fb-install-03" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/woosh-03-sqr.jpg" alt="Installation Shot"/></a></div>
+        <div><a  href="#fb-install-04" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/woosh-04-sqr.jpg" alt="Installation Shot"/></a></div>
+        <div><a  href="#fb-install-05" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/woosh-05-sqr.jpg" alt="Installation Shot"/></a></div>
+        <div><a  href="#fb-install-06" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/woosh-06-sqr.jpg" alt="Installation Shot"/></a></div>
+        <div><a  href="#fb-install-07" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/woosh-07-sqr.jpg" alt="Installation Shot"/></a></div> 
+        <div><a  href="#fb-install-08" class="fb-gallery">
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/woosh-08-sqr.jpg" alt="Installation Shot"/></a></div> 
         <div><a  href="#fb-douglas" class="fb-gallery">
             <img data-lazy="{{ site.url }}assets/img/artworks/woosh/douglas-sqr.jpg" alt="Stan Douglas" width="180px"/></a></div>
         <div><a  href="#fb-horowitz" class="fb-gallery">
@@ -8,36 +24,140 @@
         <div><a  href="#fb-jaar" class="fb-gallery">
             <img data-lazy="{{ site.url }}assets/img/artworks/woosh/jaar-sqr.jpg" alt="Alfredo Jaar" width="180px"/></a></div>
         <div><a  href="#fb-shearer" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/shearer-sqr.jpg" alt="Stephen Shearer" width="180px"/></a></div> <!--
-        <div><a  href="#fb-install-04" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/surrogates-04-sqr.jpg" alt="Installation Shot"/></a></div>
-        <div><a  href="#fb-install-05" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/surrogates-05-sqr.jpg" alt="Installation Shot"/></a></div>
-        <div><a  href="#fb-install-06" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/surrogates-06-sqr.jpg" alt="Installation Shot"/></a></div>
-        <div><a  href="#fb-install-07" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/surrogates-07-sqr.jpg" alt="Installation Shot"/></a></div> 
-        <div><a  href="#fb-install-08" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/surrogates-08-sqr.jpg" alt="Installation Shot"/></a></div> 
-       
-        <div><a  href="#fb-macleod" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/MacLeod-sqr.jpg" alt="Myfanwy MacLeod"/></a></div>
-        <div><a  href="#fb-beasley" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/beasley-sqr.jpg" alt="Kevin Beasley"/></a></div>
-        <div><a  href="#fb-beshty" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/beshty-sqr.jpg" alt="Walead Beshty"/></a></div>
-        <div><a  href="#fb-martin" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/martin-sqr.jpg" alt="Kris Martin"/></a></div>
-        <div><a  href="#fb-pascual" class="fb-gallery">
-            <img data-lazy="{{ site.url }}assets/img/artworks/pascual-sqr.jpg" alt="Marlo Pascual"/></a></div>-->
+            <img data-lazy="{{ site.url }}assets/img/artworks/woosh/shearer-sqr.jpg" alt="Stephen Shearer" width="180px"/></a></div> 
         
-
-        
-
-
     </ul>
 
     <div style="display: none;">
+        <div id="fb-install-01" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/woosh-01.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium<br>
+            dim<br><br>
+
+            
+            </span></div>
+        </div>
+        <div id="fb-install-02" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/woosh-02.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium<br>
+            dim<br><br>
+
+            
+            </span></div>
+        </div>
+        <div id="fb-install-03" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/woosh-03.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+
+            Installation shot. From left to right:<br /><br />
+
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium<br>
+            dim<br><br>
+
+            
+            </span></div>
+        </div>
+        <div id="fb-install-04" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/woosh-04.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium<br>
+            dim<br><br>
+
+            
+            </span></div>
+        </div>
+        <div id="fb-install-05" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/woosh-05.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium<br>
+            dim<br><br>
+
+            
+            </span></div>
+        </div>
+        <div id="fb-install-06" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/woosh-06.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+
+            Installation shot. From left to right:<br /><br />
+
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium<br>
+            dim<br><br>
+
+            
+            </span></div>
+        </div>
+        <div id="fb-install-07" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/woosh-07.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium<br>
+            dim<br><br>
+
+            
+            </span></div>
+        </div>
+        <div id="fb-install-08" style="max-width: 800px;">
+            <img src="{{ site.url }}assets/img/artworks/woosh/woosh-08.jpg" alt="Installation" />
+            <div >
+            <br />
+            <span class="artcaption" style="font-size: 10pt; color: #808080">
+
+            Installation shot. From left to right:<br /><br />
+
+            <strong>Artist</strong><br>
+            <em>Title</em>, year<br>
+            medium<br>
+            dim<br><br>
+
+            
+        </div>
         <div id="fb-douglas" style="max-width: 1000px;">
             <img src="{{ site.url }}assets/img/artworks/woosh/Douglas.jpg" alt="Sarah Cain" />
             <div >
@@ -85,171 +205,8 @@
             silkscreen on canvas
             </span></div>
         </div>
-        <div id="fb-install-04" style="max-width: 500px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates-04.jpg" alt="Installation" />
-            <div >
-            <br />
-            <span class="artcaption" style="font-size: 10pt; color: #808080">
-
-            Installation shot. From left to right:<br /><br />
-
-            <strong>Kim Kennedy Austin</strong><br>
-            <em>Audel’s Answers on Blue Print Reading</em>, 2006<br>
-            embroidery floss and masking tape on cross-stitched fabric<br>
-            20 x 15 in<br><br>
-
-            <strong>Tim Lee</strong><br>
-            <em>Alexander Rodchenko, Spacial Construction No. 11, Square in Square, 1918</em>, 2013<br>
-            wood<br><br>
-
-            <strong>Geoffrey Farmer</strong><br>
-            <em>Sagger-Safers, Saddled, Stoned and Sanguine</em>, 2013<br>
-            paper cutouts, wood, glass paint bottle<br>
-            15 x 9 x 6 in.
-            </span></div>
-        </div>
-        <div id="fb-install-05" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates-05.jpg" alt="Installation" />
-            <div >
-            <br />
-            <span class="artcaption" style="font-size: 10pt; color: #808080">
-
-            Installation shot. From left to right:<br /><br />
-
-            <strong>Walead Beshty</strong><br>
-            <em>Four Magnet, Three Color Curl (CMY: Irvine, California, September 13th 2009, <br>
-            Fuji Crystal Archive Type C) / Abstract (Four Magnet, Three Color Curl (CMY: Irvine, <br>
-            California, September 13th 2009, Fuji Crystal Archive Type C)</em>, 2012<br>
-            colour photographic paper<br>
-            50 x 107 in. and 30 x 40 in.<br><br>
-
-             <strong>Myfanwy MacLeod</strong><br>
-            <em>Exorcist series</em>, 2009<br>
-            cut film posters<br>
-            [33 x 33 inches] x 3<br><br>
-
-            <strong>Kim Kennedy Austin</strong><br>
-            <em>Clear Eyes, Full Hearts, Can’t Lose</em>, 2014<br>
-            watercolour on paper<br>
-            14 1/2 x 17 3/4 in.<br><br>
-
-            <strong>Kris Martin</strong><br>
-            <em>Entscheidungszwanghorror</em>, 2014<br>
-            bronze
-            11 7/16 x 5 15/16 x 7 7/8 in.
-            </span></div>
-        </div>
-        <div id="fb-install-06" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates-06.jpg" alt="Installation" />
-            <div >
-            <br />
-            <span class="artcaption" style="font-size: 10pt; color: #808080">
-
-
-            Installation shot. From left to right:<br /><br />
-            <strong>Lyman A. William</strong><br>
-            <em>The Road through the Forest</em>, 2008<br>
-            mixed media<br><br>
-
-            <strong>Rodney Graham</strong><br>
-            <em>Pipecleaner Artist</em>, 2013<br>
-            painted aluminum lightbox, transmounted chromogenic transparency<br>
-            [90 5/8 x 146 1/4 x 7 in.] x 2
-            </span></div>
-        </div>
-        <div id="fb-install-07" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates-07.jpg" alt="Installation" />
-            <div >
-            <br />
-            <span class="artcaption" style="font-size: 10pt; color: #808080">
-
-            Installation shot. From left to right:<br /><br />
-            <strong>Kim Kennedy Austin</strong><br>
-            <em>Clear Eyes, Full Hearts, Can’t Lose</em>, 2014<br>
-            watercolour on paper<br>
-            14 1/2 x 17 3/4 in.<br><br>
-
-            <strong>Kris Martin</strong><br>
-            <em>Entscheidungszwanghorror</em>, 2014<br>
-            bronze<br>
-            11 7/16 x 5 15/16 x 7 7/8 in.
-            </span></div>
-        </div>
-        <div id="fb-install-08" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/surrogates-08.jpg" alt="Installation" />
-            <div >
-            <br />
-            <span class="artcaption" style="font-size: 10pt; color: #808080">
-
-            <strong>Simon Starling</strong><br>
-            <em>Inventar –Nr. 8573 (Man Ray), 4M – 400 NM</em>, 2006<br>
-            80 6 x 7 cm. black and white transparencies, 2 Gotschmann slide projectors, <br>
-            Kodak PDC dissolve control unit, CD and player, projector table
-            </span></div>
-        </div>
-        <div id="fb-macleod" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/MacLeod-2009.jpg" alt="Installation" />
-            <div >
-            <br />
-            <span class="artcaption" style="font-size: 10pt; color: #808080">
-
-            <strong>Myfanwy MacLeod</strong><br>
-            <em>Exorcist series</em>, 2009<br>
-            cut film posters<br>
-            [33 x 33 inches] x 3
-            </span></div>
-        </div>
-        <div id="fb-beshty" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/Beshty-2012-520.jpg" alt="Installation" />
-            <div >
-            <br />
-            <span class="artcaption" style="font-size: 10pt; color: #808080">
-
-            <strong>Walead Beshty</strong><br>
-            <em>Four Magnet, Three Color Curl (CMY: Irvine, California, <br>
-            September 13th 2009, Fuji Crystal Archive Type C) / Abstract <br>
-            (Four Magnet, Three Color Curl (CMY: Irvine, California, <br>
-            September 13th 2009, Fuji Crystal Archive Type C)</em>, 2012<br>
-            colour photographic paper<br>
-            50 x 107 in. and 30 x 40 in.
-            </span></div>
-        </div>
-        <div id="fb-beasley" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/Beasley-2014.jpg" alt="Installation" />
-            <div >
-            <br />
-            <span class="artcaption" style="font-size: 10pt; color: #808080">
-
-           <strong>Kevin Beasley</strong><br>
-            <em>Untitled</em>, 2014<br>
-            polyurethane foam, t-shirts, resin<br>
-            [15 x 11.5 x 6 in.] x 2
-            </span></div>
-        </div>
-        <div id="fb-martin" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/Martin-391x520.jpg" alt="Installation" />
-            <div >
-            <br />
-            <span class="artcaption" style="font-size: 10pt; color: #808080">
-
-            <strong>Kris Martin</strong><br>
-            <em>Entscheidungszwanghorror</em>, 2014<br>
-            bronze<br>
-            11 7/16 x 5 15/16 x 7 7/8 in.
-            </span></div>
-        </div>
-        <div id="fb-pascual" style="max-width: 800px;">
-            <img src="{{ site.url }}assets/img/artworks/Pascual-624x520.jpg" alt="Installation" />
-            <div >
-            <br />
-            <span class="artcaption" style="font-size: 10pt; color: #808080">
-
-            <strong>Marlo Pascual</strong><br>
-            <em>Untitled</em>, 2009<br>
-            digital c-print, potted plant<br>
-            38 x 53 x 36 in.
-            </span></div>
-        </div>
+        
+        
     </div>
 </section>
 <br />
