--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -156,7 +156,7 @@
             medium<br>
             dim<br><br>
 
-            
+            </span></div>
         </div>
         <div id="fb-douglas" style="max-width: 1000px;">
             <img src="{{ site.url }}assets/img/artworks/woosh/Douglas.jpg" alt="Sarah Cain" />
