woosh install shots

--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -37,9 +37,14 @@
 
             Installation shot. From left to right:<br /><br />
 
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium<br>
+            <strong>Kris Martin</strong><br>
+            <em>Do Not Cross the Red Line</em>, 2012<br>
+            metal sign, red tape<br>
+            dim<br><br>
+
+            <strong>Liz Magor</strong><br>
+            <em>KD- The Original</em>, 2000<br>
+            silicon rubber, food<br>
             dim<br><br>
 
             
@@ -53,9 +58,24 @@
 
             Installation shot. From left to right:<br /><br />
 
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium<br>
+            <strong>Ron Terada</strong><br>
+            <em>Jeopardy</em>, 1998<br>
+            acrylic on canvas<br>
+            dim<br><br>
+
+            <strong>Ian Wallace</strong><br>
+            <em>Magazine Piece</em>, 1969/2015<br>
+            magazine, tape<br>
+            dim<br><br>
+
+            <strong>Santiago Sierra</strong><br>
+            <em>NO</em>, 2009<br>
+            mahogany<br>
+            dim<br><br>
+
+            <strong>Steven Shearer</strong><br>
+            <em>Diabolical Conquest</em>, 1997<br>
+            silkscreen on canvas<br>
             dim<br><br>
 
             
@@ -70,10 +90,40 @@
 
             Installation shot. From left to right:<br /><br />
 
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium<br>
+            
+            <strong>Liz Magor</strong><br>
+            <em>KD- The Original</em>, 2000<br>
+            silicon rubber, food<br>
             dim<br><br>
+
+            <strong>Tatiana Trouve</strong><br>
+            <em>29.08.1924</em>, 2010<br>
+            bronze, paint<br>
+            dim<br><br>
+
+            <strong>Stan Douglas</strong><br>
+            <em>Ballantyne Pier, 18 June 1935</em>, 2008<br>
+            digital C-print mounted on dibond<br>
+            dim<br><br>
+
+            <strong>Jonathan Horowitz</strong><br>
+            <em>Official Portrait of George W Bush Available for <br>
+            Free From the White House Hung Upside Down</em>, 2001<br>
+            framed c-print, ink<br>
+            dim<br><br>
+
+            <strong>Alicja Kwade</strong><br>
+            <em>17.08.1931</em>, 2012<br>
+            mirror bronze<br>
+            dim<br><br>
+
+            <strong>Jason Dodge</strong><br>
+            In Yerevan, Tumanyan, Armenia, Anijk Voskanyan <br>
+            wove woolen yarn the color of night time sky and <br>
+            the length from the earth to above the weather
+
+
+
 
             
             </span></div>
@@ -86,12 +136,31 @@
 
             Installation shot. From left to right:<br /><br />
 
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium<br>
+            <strong>Ian Wallace</strong><br>
+            <em>Magazine Piece</em>, 1969/2015<br>
+            magazine, tape<br>
             dim<br><br>
 
-            
+            <strong>Santiago Sierra</strong><br>
+            <em>NO</em>, 2009<br>
+            mahogany<br>
+            dim<br><br>
+
+            <strong>Steven Shearer</strong><br>
+            <em>Diabolical Conquest</em>, 1997<br>
+            silkscreen on canvas<br>
+            dim<br><br>
+
+            <strong>Yevgeniy Fiks</strong><br>
+            <em>Adopt Lenin, yf2008-015</em>, 2008<br>
+            metal head, shelf, adoption papers<br>
+            dim<br><br>
+
+            <strong>Santiago Sierra</strong><br>
+            <em>100 Beggars, Plaza Estudiantes, Mexico City</em>, 2005<br>
+            digital C-prints<br>
+            dim
+    
             </span></div>
         </div>
         <div id="fb-install-05" style="max-width: 800px;">
@@ -102,10 +171,21 @@
 
             Installation shot. From left to right:<br /><br />
 
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium<br>
+            <strong>Johannes Wohnseifer</strong><br>
+            <em>Spam Painting #13</em>, 2005<br>
+            acrylic on aluminum<br>
             dim<br><br>
+
+            <strong>Kelly Mark</strong><br>
+            <em>1000 Cast Iron Hits</em>, 1996<br>
+            cast iron<br>
+            dim<br><br>
+
+            <strong>Ron Terada</strong><br>
+            <em>Jeopardy</em>, 1998<br>
+            acrylic on canvas<br>
+            dim<br><br>
+
 
             
             </span></div>
@@ -119,10 +199,21 @@
 
             Installation shot. From left to right:<br /><br />
 
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium<br>
+            <strong>Steven Shearer</strong><br>
+            <em>Diabolical Conquest</em>, 1997<br>
+            silkscreen on canvas<br>
             dim<br><br>
+
+            <strong>Yevgeniy Fiks</strong><br>
+            <em>Adopt Lenin, yf2008-015</em>, 2008<br>
+            metal head, shelf, adoption papers<br>
+            dim<br><br>
+
+            <strong>Santiago Sierra</strong><br>
+            <em>100 Beggars, Plaza Estudiantes, Mexico City</em>, 2005<br>
+            digital C-prints<br>
+            dim<br><br>
+
 
             
             </span></div>
@@ -135,9 +226,9 @@
 
             Installation shot. From left to right:<br /><br />
 
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium<br>
+            <strong>Alicja Kwade</strong><br>
+            <em>17.08.1931</em>, 2012<br>
+            mirror bronze<br>
             dim<br><br>
 
             
@@ -151,10 +242,26 @@
 
             Installation shot. From left to right:<br /><br />
 
-            <strong>Artist</strong><br>
-            <em>Title</em>, year<br>
-            medium<br>
+            <strong>John McCracken</strong><br>
+            <em>Woosh</em>, 1995<br>
+            polyester resin, fibreglas, resin<br>
             dim<br><br>
+
+            <strong>Pier Paulo Calzolari</strong><br>
+            <em>Untitled</em>, 1989<br>
+            Burnt salt, burnt felt, dyes, lead, refrigeration unit<br>
+            dim<br><br>
+
+            <strong>Andrew Dadson</strong><br>
+            <em>White Re-Stretched (Silver)</em>, 2014<br>
+            oil on linen<br>
+            dim<br><br>
+
+            <strong>Carsten Nicolai</strong><br>
+            <em>Milch 20 hz</em>, 2011<br>
+            pigment print<br>
+            dim<br><br>
+
 
             </span></div>
         </div>
