woosh install shots

--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -58,27 +58,37 @@
 
             Installation shot. From left to right:<br /><br />
 
+            <div class="row">
+
+            <div class="col-md-3">
             <strong>Ron Terada</strong><br>
             <em>Jeopardy</em>, 1998<br>
             acrylic on canvas<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-3">
             <strong>Ian Wallace</strong><br>
             <em>Magazine Piece</em>, 1969/2015<br>
             magazine, tape<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-3">
             <strong>Santiago Sierra</strong><br>
             <em>NO</em>, 2009<br>
             mahogany<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-3">
             <strong>Steven Shearer</strong><br>
             <em>Diabolical Conquest</em>, 1997<br>
             silkscreen on canvas<br>
             dim<br><br>
+            </div>
 
-            
+            </div>
             </span></div>
         </div>
         <div id="fb-install-03" style="max-width: 800px;">
