woosh install shots

--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -100,42 +100,56 @@
 
             Installation shot. From left to right:<br /><br />
 
-            
+        <div class="row">
+
+            <div class="col-md-4">
             <strong>Liz Magor</strong><br>
             <em>KD- The Original</em>, 2000<br>
             silicon rubber, food<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Tatiana Trouve</strong><br>
             <em>29.08.1924</em>, 2010<br>
             bronze, paint<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Stan Douglas</strong><br>
             <em>Ballantyne Pier, 18 June 1935</em>, 2008<br>
             digital C-print mounted on dibond<br>
             dim<br><br>
+            </div>
 
+        </div>
+        <div class="row">
+
+            <div class="col-md-4">
             <strong>Jonathan Horowitz</strong><br>
             <em>Official Portrait of George W Bush Available for <br>
             Free From the White House Hung Upside Down</em>, 2001<br>
             framed c-print, ink<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Alicja Kwade</strong><br>
             <em>17.08.1931</em>, 2012<br>
             mirror bronze<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Jason Dodge</strong><br>
             In Yerevan, Tumanyan, Armenia, Anijk Voskanyan <br>
             wove woolen yarn the color of night time sky and <br>
             the length from the earth to above the weather
+            </div>
 
 
-
-
-            
+        </div>
             </span></div>
         </div>
         <div id="fb-install-04" style="max-width: 800px;">
