woosh install shots

--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -102,14 +102,14 @@
 
         <div class="row">
 
-            <div class="col-md-5">
+            <div class="col-md-4">
             <strong>Liz Magor</strong><br>
             <em>KD- The Original</em>, 2000<br>
             silicon rubber, food<br>
             dim<br><br>
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-3">
             <strong>Tatiana Trouve</strong><br>
             <em>29.08.1924</em>, 2010<br>
             bronze, paint<br>
@@ -126,15 +126,16 @@
         </div>
         <div class="row">
 
-            <div class="col-md-5">
+            <div class="col-md-4">
             <strong>Jonathan Horowitz</strong><br>
-            <em>Official Portrait of George W Bush Available for <br>
-            Free From the White House Hung Upside Down</em>, 2001<br>
+            <em>Official Portrait of George W Bush 
+            Available for Free From the White House 
+            Hung Upside Down</em>, 2001<br>
             framed c-print, ink<br>
             dim<br><br>
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-3">
             <strong>Alicja Kwade</strong><br>
             <em>17.08.1931</em>, 2012<br>
             mirror bronze<br>
@@ -143,8 +144,8 @@
 
             <div class="col-md-5">
             <strong>Jason Dodge</strong><br>
-            In Yerevan, Tumanyan, Armenia, Anijk Voskanyan <br>
-            wove woolen yarn the color of night time sky and <br>
+            In Yerevan, Tumanyan, Armenia, Anijk Voskanyan 
+            wove woolen yarn the color of night time sky and 
             the length from the earth to above the weather
             </div>
 
