woosh install shots

--- a/_includes/slider-woosh.html
+++ b/_includes/slider-woosh.html
@@ -36,16 +36,23 @@
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
+        <div class="row">
 
+            <div class="col-md-6">
             <strong>Kris Martin</strong><br>
             <em>Do Not Cross the Red Line</em>, 2012<br>
             metal sign, red tape<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-6">
             <strong>Liz Magor</strong><br>
             <em>KD- The Original</em>, 2000<br>
             silicon rubber, food<br>
             dim<br><br>
+            </div>
+
+        </div>
 
             
             </span></div>
@@ -160,31 +167,41 @@
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
+        <div class="row">
 
+            <div class="col-md-4">
             <strong>Ian Wallace</strong><br>
             <em>Magazine Piece</em>, 1969/2015<br>
             magazine, tape<br>
             dim<br><br>
 
+            <div class="col-md-4">
             <strong>Santiago Sierra</strong><br>
             <em>NO</em>, 2009<br>
             mahogany<br>
             dim<br><br>
 
+            <div class="col-md-4">
             <strong>Steven Shearer</strong><br>
             <em>Diabolical Conquest</em>, 1997<br>
             silkscreen on canvas<br>
             dim<br><br>
-
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
             <strong>Yevgeniy Fiks</strong><br>
             <em>Adopt Lenin, yf2008-015</em>, 2008<br>
             metal head, shelf, adoption papers<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-6">
             <strong>Santiago Sierra</strong><br>
             <em>100 Beggars, Plaza Estudiantes, Mexico City</em>, 2005<br>
             digital C-prints<br>
             dim
+            </div>
     
             </span></div>
         </div>
@@ -195,24 +212,31 @@
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
+        <div class="row">
 
+            <div class="col-md-4">
             <strong>Johannes Wohnseifer</strong><br>
             <em>Spam Painting #13</em>, 2005<br>
             acrylic on aluminum<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Kelly Mark</strong><br>
             <em>1000 Cast Iron Hits</em>, 1996<br>
             cast iron<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Ron Terada</strong><br>
             <em>Jeopardy</em>, 1998<br>
             acrylic on canvas<br>
             dim<br><br>
+            </div>
 
 
-            
+        </div>    
             </span></div>
         </div>
         <div id="fb-install-06" style="max-width: 800px;">
@@ -223,23 +247,30 @@
 
 
             Installation shot. From left to right:<br /><br />
+        <div class="row">
 
+            <div class="col-md-4">
             <strong>Steven Shearer</strong><br>
             <em>Diabolical Conquest</em>, 1997<br>
             silkscreen on canvas<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Yevgeniy Fiks</strong><br>
             <em>Adopt Lenin, yf2008-015</em>, 2008<br>
             metal head, shelf, adoption papers<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-4">
             <strong>Santiago Sierra</strong><br>
             <em>100 Beggars, Plaza Estudiantes, Mexico City</em>, 2005<br>
             digital C-prints<br>
             dim<br><br>
+            </div>
 
-
+        </div>
             
             </span></div>
         </div>
@@ -266,26 +297,37 @@
             <span class="artcaption" style="font-size: 10pt; color: #808080">
 
             Installation shot. From left to right:<br /><br />
+        <div class="row">
 
+            <div class="col-md-3">
             <strong>John McCracken</strong><br>
             <em>Woosh</em>, 1995<br>
             polyester resin, fibreglas, resin<br>
             dim<br><br>
+            </div>
 
+            
+            <div class="col-md-3">
             <strong>Pier Paulo Calzolari</strong><br>
             <em>Untitled</em>, 1989<br>
             Burnt salt, burnt felt, dyes, lead, refrigeration unit<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-3">
             <strong>Andrew Dadson</strong><br>
             <em>White Re-Stretched (Silver)</em>, 2014<br>
             oil on linen<br>
             dim<br><br>
+            </div>
 
+            <div class="col-md-3">
             <strong>Carsten Nicolai</strong><br>
             <em>Milch 20 hz</em>, 2011<br>
             pigment print<br>
             dim<br><br>
+            </div>
+        </div>
 
 
             </span></div>
